<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorBackground"
    tools:context=".ui.detailmovie.DetailMovieActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="@dimen/dimen_40dp"
            android:layout_height="@dimen/dimen_40dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:visibility="visible"/>

        <com.jgabrielfreitas.core.BlurImageView
            android:id="@+id/img_detail_movie_poster_blur"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            app:radius="10"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <ImageView
            android:id="@+id/btn_favorite"
            android:layout_width="@dimen/dimen_50dp"
            android:layout_height="@dimen/dimen_50dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:src="@drawable/ic_favorite"
            android:layout_marginEnd="@dimen/dimen_30dp"
            android:layout_marginTop="@dimen/dimen_20dp"
            android:elevation="@dimen/dimen_5dp"
            app:layout_constraintTop_toBottomOf="@id/img_detail_movie_poster_blur"
            android:contentDescription="@string/favorite" />


        <ImageView
            android:id="@+id/img_detail_movie_poster"
            android:layout_width="100dp"
            android:layout_height="150dp"
            android:layout_marginTop="130dp"
            android:layout_marginStart="30dp"
            android:elevation="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tv_detail_movie_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:textAllCaps="true"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@id/img_detail_movie_poster"
            app:layout_constraintTop_toBottomOf="@id/img_detail_movie_poster_blur" />

        <TextView
            android:id="@+id/tv_detail_movie_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="italic"
            android:textSize="16sp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:textColor="@color/darkGrey"
            app:layout_constraintTop_toBottomOf="@id/tv_detail_movie_title"
            app:layout_constraintStart_toEndOf="@id/img_detail_movie_poster"/>

        <View
            android:id="@+id/view1"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@drawable/bg_gray"
            android:layout_marginRight="26dp"
            android:layout_marginLeft="26dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintTop_toBottomOf="@id/img_detail_movie_poster"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tv_detail_movie_genre_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="26dp"
            android:layout_marginTop="8dp"
            android:text="@string/genre"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/darkGrey"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view1" />

        <TextView
            android:id="@+id/tv_detail_movie_genre"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="26dp"
            android:layout_marginEnd="26dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/bg_corner"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_detail_movie_genre_text" />

        <View
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@drawable/bg_gray"
            android:layout_marginRight="26dp"
            android:layout_marginLeft="26dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="10dp"
            app:layout_constraintTop_toBottomOf="@id/tv_detail_movie_genre"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tv_detail_movie_description_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="26dp"
            android:layout_marginTop="8dp"
            android:text="@string/description"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/darkGrey"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view2" />

        <TextView
            android:id="@+id/tv_detail_movie_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="26dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="26dp"
            android:textSize="16sp"
            android:textColor="@color/darkGrey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_detail_movie_description_text" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>