<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_movies"
        android:icon="@drawable/ic_local_play_black_24dp"
        android:title="@string/title_movies" />
    <item
        android:id="@+id/navigation_tvshow"
        android:icon="@drawable/ic_tv_black_24dp"
        android:title="@string/title_tvshow" />

</menu>
