<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_change_setting"
        android:title="@string/change_language_settings"
        app:showAsAction="never"/>
    <item android:id="@+id/action_favorite"
        android:title="@string/favorite_list"
        android:icon="@drawable/ic_favorite"
        app:showAsAction="ifRoom"/>
</menu>